[package]
name = "bark-dev"
version = "0.1.0"
edition = "2021"
authors = ["66f94eae <66f94eae@gmail.com>"]
description = "This a library for the bark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.66"
openssl-sys = "0.9.103"
reqwest = { version = "0.12.5"}
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
